resolve npm drama that wasn't allowing me to compile

--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "doctor",
   "version": "1.0.0",
-  "description": "temp",
+  "description": "Finds doctors using API",
   "main": "index.js",
   "scripts": {
     "test": "karma start karma.conf.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bizzclaw/epicodus-doctors.git"
+  },
   "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
+    "transform": [["babelify", { "presets": ["es2015"] }]]
   },
   "author": "Joseph Tomlinson",
   "license": "ISC",
